--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -18,15 +18,15 @@
    
    
    <h1 class="text-center">Register Here!!</h1>
-   <form action="" th:action="@{/do_register}" method="post">
+   <form action="" th:action="@{/do_register}" method="post" th:object="${user}">
    
    
    <!-- This is name field -->
    <div class="mb-3">
     <label for="name_field" class="form-label">Your name</label>
-    <input 
+    <input name="name"
     type="text" 
-    class="form-control" id="name_field" aria-describedby="emailHelp" placeholder="Enter here">
+    class="form-control" id="name_field" aria-describedby="emailHelp" placeholder="Enter here" required th:value="${user.name}">
   </div>
   
   
@@ -34,9 +34,9 @@
    <!-- This is email field -->
    <div class="mb-3">
     <label for="email_field" class="form-label">Your email</label>
-    <input 
+    <input name="email"
     type="email" 
-    class="form-control" id="email_field" aria-describedby="emailHelp" placeholder="Enter here">
+    class="form-control" id="email_field" aria-describedby="emailHelp" placeholder="Enter here" required th:value="${user.email}">
   </div>
   
   
@@ -44,7 +44,7 @@
    <div class="mb-3">
     <label for="password_field" class="form-label">Your password</label>
     <input 
-    type="password" 
+    type="password" name="password"
     class="form-control" id="password_field" aria-describedby="emailHelp" placeholder="Enter here">
   </div>
   
@@ -53,12 +53,18 @@
   <!-- This is about field -->
    <div class="mb-3">
     <label for="about_field" class="form-label">About</label>
-    <textarea  rows="10"
-    class="form-control" id="about_field" aria-describedby="emailHelp" placeholder="Enter something about yourself"></textarea>
+    <textarea  rows="10" name="about"
+    class="form-control" id="about_field" aria-describedby="emailHelp" placeholder="Enter something about yourself" th:value="${user.about}"></textarea>
+  </div>
+  
+  <!-- terms and conditions agreed -->
+  <div class="form-group form-check">
+ <input type="checkbox" name="agreement" class="form-check-input" id="agreement"/>
+ <label for="agreement">Accept terms and conditions</label> 
   </div>
   
   
-  <div class="container text-center">
+  <div class="container text-center mt-2">
   <button class="btn-primary" type="submit">Submit</button>
   <button class="btn-primary" type="reset">Reset</button>
   </div>
