--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -49,7 +49,7 @@
 						tabindex="-1" aria-disabled="true">Login</a></li>
 						
 						
-					<li class="nav-item"><a class="nav-link " th:href="@{/signup/}" href="#"
+					<li class="nav-item"><a class="nav-link " th:href="@{/signup}" href="#"
 						tabindex="-1" aria-disabled="true">Signup</a></li>
 				</ul>
 				<!-- <form class="d-flex">
@@ -63,7 +63,7 @@
 	
 	<!-- End of navbar  -->
 
-
+	
 	<div th:replace="${content}"></div>
 
     <!-- Optional JavaScript; choose one of the two! -->
