--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -10,9 +10,20 @@
    <div class="container mt-3">
    <div class="row">
    <div class="col-md-8 offset-md-2">
+   <div class="mycard mt-1">
    
-   <div class="mycard">
-   <div class="container text-center">
+						<!-- <div th:if="${session.message}" th:classappend="${session.message.type}" class="alert" role="alert">
+						<p class="text-center" th:text="${session.message.content}"></p>
+						<th:block th:text="${#session.removeAttribute('message')}"></th:block>
+						</div> -->
+
+
+						<div th:if="${message}" th:classappend="${message.type}"
+							class="alert" role="alert">
+							<p class="text-center" th:text="${message.content}"></p>
+						</div>
+
+						<div class="container text-center">
    <img alt="" th:src="@{/img/add.png}" width="50px" height="50px" src="">
    </div>
    
@@ -26,7 +37,12 @@
     <label for="name_field" class="form-label">Your name</label>
     <input name="name"
     type="text" 
-    class="form-control" id="name_field" aria-describedby="emailHelp" placeholder="Enter here" required th:value="${user.name}">
+    class="form-control" th:classappend="${#fields.hasErrors('name')? 'is-invalid':''}"
+     id="name_field" aria-describedby="emailHelp" placeholder="Enter here" required th:value="${user.name}">
+    
+    <div class="invalid-feedback" th:each="e : ${#fields.errors('name')}" th:text="${e}">
+          
+        </div>
   </div>
   
   
