login page added on dashboard

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -51,4 +51,22 @@
     </div>
 </section>
 </body>
-</html>
+</html> 
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{base::layout(~{::section})}">
+<head>
+<meta charset="UTF-8">
+<title> Home page</title>
+</head>
+<body>
+
+    <section>
+    <h1>This is custom login page</h1>
+    
+    </section>
+    
+</body>
+</html>  -->
