--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -45,7 +45,7 @@
 									here</a>
 						</div>
 						</li> -->
-					<li class="nav-item"><a class="nav-link " href="#"
+					<li class="nav-item"><a class="nav-link " th:href="@{/login}"
 						tabindex="-1" aria-disabled="true">Login</a></li>
 						
 						
