--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -17,3 +17,56 @@ body{
 	padding:20px;
 	background: #ffffff;
 }
+
+.sidebar{
+	width: 20%;
+	background: white;
+	height:100vh;
+	position:fixed;
+	padding-top: 45px;
+}
+
+.sidebar a{
+	display:block;
+	width:100%;
+	padding: 10px 25px;
+	color: black;
+}
+
+.sidebar a:hover{
+	background: #e2e2e2;
+}
+
+@media only screen and (max-width: 600px){
+	.sidebar{
+	display:none;
+	width: 80% !important;
+	background: white;
+	height: 100vh;
+	position: fixed;
+	padding-top: 20px;
+	
+	}
+	.content{
+	margin-left: 0% !important;
+	}
+}
+
+.sidebar .divider{
+	height: 0.5 px;
+	width: 100%;
+	background: #e2e2e2;
+	margin-top:10px
+}
+
+.sidebar .crossbtn{
+	position: absolute;
+	top:0;
+	right:35px;
+	font-size:30px;
+	cursor:pointer;
+}
+
+.content{
+	margin-left: 25%;
+}
