--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 
     <section class="banner d-flex justify-content-center align-items-center">
     <div class="text-center">
-    <h1 class="font-weight-bold font-style-italic">SMART CONTRACT MANAGER</h1>
+    <h1 class="font-weight-bold font-style-italic">SMART CONTACT MANAGER</h1>
     <p>Manage your contacts smarter and faster with our Smart Contact Manager.
      Store, organize, and access all your personal and professional connections
       in one secure place. With easy search, quick updates, and seamless 
