--- a/src/main/resources/templates/normal/user_dashboard.html
+++ b/src/main/resources/templates/normal/user_dashboard.html
@@ -1,10 +1,40 @@
-<!DOCTYPE html>
-<html>
+<!-- <!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
 <h1>Hi we are learning user authentication</h1>
+<h1>Username <span th:text="${user.name}"></span></h1>
+<h1>Email <span th:text="${user.email}"></span></h1>
+<h1><a href="@{/logout}">Logout</a></h1>
 </body>
-</html>
+</html> -->
+
+
+
+
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="normal/base::layout(~{::section})">
+<head>
+<meta charset="UTF-8">
+<title> Home page</title>
+</head>
+<body>
+
+    <section>
+		<h1>Hi we are learning user authentication</h1>
+		<h1>
+			Username <span th:text="${user.name}"></span>
+		</h1>
+		<h1>
+			Email <span th:text="${user.email}"></span>
+		</h1>
+		<h1>
+			<a th:href="@{/logout}">Logout</a>
+		</h1>
+	</section>
+    
+</body>
+</html> 
