--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -72,12 +72,12 @@
 	<div class="sidebar">
 	
 	<span onclick="toggleSidebar()" class="crossbtn">&times;</span>
-	<a href="#" class="item"> <i class="fa-solid fa-house"></i> Home</a>
+	<a href="#" th:href="@{/user/index}" class="item"> <i class="fa-solid fa-house"></i> Home</a>
 	<a href="#" class="item"><i class="fa-solid fa-street-view"></i> View Contacts</a>
-	<a href="#" class="item"><i class="fa-solid fa-user-plus"></i> Add Contact</a>
+	<a href="#" th:href="@{/user/add_contact}" class="item"><i class="fa-solid fa-user-plus"></i> Add Contact</a>
 	<a href="#" class="item"><i class="fa-solid fa-user"></i> Your Profile</a>
 	<a href="#" class="item"><i class="fa-solid fa-gear"></i> Settings</a>
-	<a href="#" class="item"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+	<a href="#" th:href="@{/logout}" class="item"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
 	
 	<div class="divider"></div>
 	
