--- a/src/main/resources/templates/normal/add_contact.html
+++ b/src/main/resources/templates/normal/add_contact.html
@@ -7,8 +7,110 @@
 <body>
 
     <section>
-		<h1>This is your private dashboard</h1>
-		</h1>
+		<div class="card mr-3">
+			<div class="card-body">
+				<h1 class="text-center mt-4">Add Contact</h1>
+				<div class="container-fluid mt-1">
+					<div class="row">
+						<div class="col-md-10 offset-md-1">
+							<form action="#" th:object="${contact}"
+								enctype="multipart/form-data" method="post"
+								th:action="@{/user/process-contact}" class="mt-2">
+								<!-- First name -->
+								<div class="input-group">
+									<div class="input-group-prepend">
+										<div class="input-group-text mr-3">
+											<i class="fa fa-plus"></i>
+										</div>
+									</div>
+
+									<input type="text" id="firstName" name="name"
+										placeholder="Enter the first name" class="form-control ml-1">
+
+
+								</div>
+
+								<!-- second name -->
+								<div class="input-group mt-3">
+									<div class="input-group-prepend">
+										<div class="input-group-text mr-6">
+											<i class="fa fa-user-alt"></i>
+										</div>
+									</div>
+
+									<input type="text" id="secondName" name="secondName"
+										placeholder="Enter the second name" class="form-control ml-1">
+
+
+								</div>
+
+
+								<!-- phone -->
+								<div class="input-group mt-3">
+									<div class="input-group-prepend">
+										<div class="input-group-text mr-6">
+											<i class="fa fa-phone-alt"></i>
+										</div>
+									</div>
+
+									<input type="number" id="phone" name="phone"
+										placeholder="Enter the phone number" class="form-control ml-1">
+
+
+								</div>
+
+
+								<!-- email -->
+								<div class="input-group mt-3">
+									<div class="input-group-prepend">
+										<div class="input-group-text mr-6">@</div>
+									</div>
+
+									<input type="email" id="email" name="email"
+										placeholder="Enter the email" class="form-control ml-1">
+
+
+								</div>
+
+
+								<!-- work -->
+								<div class="input-group mt-3">
+									<div class="input-group-prepend">
+										<div class="input-group-text mr-6">
+											<i class="fa fa-briefcase"></i>
+										</div>
+									</div>
+
+									<input type="text" id="work" name="work"
+										placeholder="Enter the work here" class="form-control ml-1">
+
+
+								</div>
+								
+								<!-- description  -->
+								<div class="form-group">
+								<textarea rows="10" cols="60" name="description" id="description" placeholder="Enter description" class="form-control mt-3"></textarea>
+								</div>
+								
+								
+								<!--Contact Image  -->
+								
+								<div class="custom-file mt-3">
+								<input type="file" name="image" id="image">
+								</div>
+								
+								<div class="container text-center">
+								<button class="btn btn-outline-success">Save Button</button>
+								</div>
+
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
 	</section>
     
 </body>
