--- a/src/main/resources/templates/normal/add_contact.html
+++ b/src/main/resources/templates/normal/add_contact.html
@@ -15,7 +15,7 @@
 						<div class="col-md-10 offset-md-1">
 							<form action="#" th:object="${contact}"
 								enctype="multipart/form-data" method="post"
-								th:action="@{/user/process-contact}" class="mt-2">
+								th:action="@{/user/process_contact}" class="mt-2">
 								<!-- First name -->
 								<div class="input-group">
 									<div class="input-group-prepend">
@@ -93,17 +93,30 @@
 								</div>
 								
 								
-								<!--Contact Image  -->
+								<!-- <!--Contact Image  -->
 								
-								<div class="custom-file mt-3">
+								<!-- <div class="custom-file mt-3">
 								<input type="file" name="image" id="image">
-								</div>
+					4			</div> -->
+					
+					
+					<!-- Contact Image -->
+                            <div class="form-group mt-3">
+                                <label for="image">Choose Contact Image</label>
+                                <input type="file" name="image" id="image"
+                                       class="form-control-file">
+                            </div>
 								
 								<div class="container text-center">
 								<button class="btn btn-outline-success">Save Button</button>
 								</div>
 
 							</form>
+							
+							<!-- Success message -->
+                        <div th:if="${message}" class="alert alert-success mt-3">
+                            <span th:text="${message}"></span>
+                        </div>
 						</div>
 					</div>
 				</div>
