contact saved in db

--- a/src/main/resources/templates/normal/add_contact.html
+++ b/src/main/resources/templates/normal/add_contact.html
@@ -101,10 +101,9 @@
 					
 					
 					<!-- Contact Image -->
-                            <div class="form-group mt-3">
-                                <label for="image">Choose Contact Image</label>
-                                <input type="file" name="image" id="image"
-                                       class="form-control-file">
+                            <div class="custom-file">
+                                <!-- <label for="image">Choose Contact Image</label> -->
+                                <input type="file" name="profileImage" >
                             </div>
 								
 								<div class="container text-center">
