--- a/src/main/resources/templates/normal/add_contact.html
+++ b/src/main/resources/templates/normal/add_contact.html
@@ -25,7 +25,7 @@
 									</div>
 
 									<input type="text" id="firstName" name="name"
-										placeholder="Enter the first name" class="form-control ml-1">
+										placeholder="Enter the first name" class="form-control ml-1" required>
 
 
 								</div>
@@ -54,7 +54,7 @@
 									</div>
 
 									<input type="number" id="phone" name="phone"
-										placeholder="Enter the phone number" class="form-control ml-1">
+										placeholder="Enter the phone number" class="form-control ml-1" required min="10">
 
 
 								</div>
@@ -67,7 +67,7 @@
 									</div>
 
 									<input type="email" id="email" name="email"
-										placeholder="Enter the email" class="form-control ml-1">
+										placeholder="Enter the email" class="form-control ml-1" required>
 
 
 								</div>
@@ -89,7 +89,7 @@
 								
 								<!-- description  -->
 								<div class="form-group">
-								<textarea rows="10" cols="60" name="description" id="description" placeholder="Enter description" class="form-control mt-3"></textarea>
+								<textarea rows="10" cols="60" name="description" id="mytextarea" placeholder="Enter description" class="form-control mt-3"></textarea>
 								</div>
 								
 								
@@ -122,6 +122,16 @@
 			</div>
 
 		</div>
+		    <script src="https://cdn.tiny.cloud/1/u75j9k4j27ctmdminpmytozj1tqgjow7k848wh1vcs2c5xnl/tinymce/8/tinymce.min.js" referrerpolicy="origin"></script>
+		    <script>
+        tinymce.init({
+          selector: '#mytextarea', // Specifies the element to replace with the editor
+          min_height: 550,
+          plugins: 'lists link table code help wordcount autoresize', // Include desired plugins
+          toolbar: 'undo redo | blocks | bold italic | fontfamily fontsize | alignleft aligncenter alignright alignjustify | outdent indent' // Configure toolbar buttons
+         
+        });
+      </script>
 
 	</section>
     
