view contacts handler added

--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -73,7 +73,7 @@
 	
 	<span onclick="toggleSidebar()" class="crossbtn">&times;</span>
 	<a href="#" th:href="@{/user/index}" class="item"> <i class="fa-solid fa-house"></i> Home</a>
-	<a href="#" class="item"><i class="fa-solid fa-street-view"></i> View Contacts</a>
+	<a href="#" th:href="@{/user/show_contacts}" class="item"><i class="fa-solid fa-street-view"></i> View Contacts</a>
 	<a href="#" th:href="@{/user/add_contact}" class="item"><i class="fa-solid fa-user-plus"></i> Add Contact</a>
 	<a href="#" class="item"><i class="fa-solid fa-user"></i> Your Profile</a>
 	<a href="#" class="item"><i class="fa-solid fa-gear"></i> Settings</a>
