--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="normal/base::layout(~{::section})">
 <head>
 <meta charset="UTF-8">
 <title>Show Contacts</title>
 </head>
 <body>
 <section>
+<div class="card">
+<div class="card-body">
+<h1 class="text-center">Your Contacts</h1>
 
+</div>
+</div>
 
 
 </section>
-
 </body>
 </html>
