--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -28,12 +28,29 @@
       <td th:text="${c.name}">Mark</td>
       <td th:text="${c.email}">Otto</td>
       <td th:text="${c.phone}">@mdo</td>
-      <td>@mdo</td>
+      <td>
+      <button class="btn btn-danger">Delete</button>
+      <button class="btn btn-success">Updatee</button>
+      
+      
+      </td>
     </tr>
     
     
   </tbody>
 </table>
+
+
+<!-- Pagination -->
+<nav aria-label="Page navigation example">
+  <ul class="pagination">
+    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <!-- <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li> -->
+    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+  </ul>
+</nav>
 
 </div>
 </div>
