--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -44,11 +44,11 @@
 <!-- Pagination -->
 <nav aria-label="Page navigation example">
   <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li th:if="${currentPage!=0}" class="page-item"><a class="page-link" href="#"  th:href="@{'/user/show_contacts/'+ ${currentPage-1}}">Previous</a></li>
+    <li th:classappend="${currentPage==i-1?'active':''}" th:each="i:${#numbers.sequence(1,totalPages)}" class="page-item"><a class="page-link" href="#" th:href="@{'/user/show_contacts/'+ ${i-1}}"><span th:text=${i}></span></a></li>
     <!-- <li class="page-item"><a class="page-link" href="#">2</a></li>
     <li class="page-item"><a class="page-link" href="#">3</a></li> -->
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    <li th:if="${currentPage+1!=totalPages}" class="page-item"><a class="page-link" href="#" th:href="@{'/user/show_contacts/'+ ${currentPage+1}}">Next</a></li>
   </ul>
 </nav>
 
