images on profile lists

--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -25,7 +25,9 @@
   <tbody>
     <tr th:each="c:${contacts}">
       <th scope="row" th:text=" 'SCM2025'+${c.cId}">1</th>
-      <td th:text="${c.name}">Mark</td>
+      <td>
+      <img src="" class="my_profile_picture" th:src="@{'/img/'+${c.image}}" alt="profile_photo">
+      <span th:text="${c.name}"></span></td>
       <td th:text="${c.email}">Otto</td>
       <td th:text="${c.phone}">@mdo</td>
       <td>
@@ -46,8 +48,6 @@
   <ul class="pagination">
     <li th:if="${currentPage!=0}" class="page-item"><a class="page-link" href="#"  th:href="@{'/user/show_contacts/'+ ${currentPage-1}}">Previous</a></li>
     <li th:classappend="${currentPage==i-1?'active':''}" th:each="i:${#numbers.sequence(1,totalPages)}" class="page-item"><a class="page-link" href="#" th:href="@{'/user/show_contacts/'+ ${i-1}}"><span th:text=${i}></span></a></li>
-    <!-- <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li> -->
     <li th:if="${currentPage+1!=totalPages}" class="page-item"><a class="page-link" href="#" th:href="@{'/user/show_contacts/'+ ${currentPage+1}}">Next</a></li>
   </ul>
 </nav>
