--- a/src/main/resources/templates/normal/contact_details.html
+++ b/src/main/resources/templates/normal/contact_details.html
@@ -9,13 +9,51 @@
 <div class="card">
 <div class="card-body">
 <div class="container text-center">
-<img src="" style="height:200px ; width:300px" class="my_profile_picture" th:src="@{'/img/'+${contact.image}}" alt="profile_photo">
+<img src="" style="height:300px ; width:350px" class="my_profile_picture" th:src="@{'/img/'+${contact.image}}" alt="profile_photo">
 <h3 th:text="${contact.name}"></h3>
-<h3 th:text="${contact.secondName}"></h3>
+<!-- <h3 th:text="${contact.secondName}"></h3>
 <h3 th:text="${contact.phone}"></h3>
 <h3 th:text="${contact.work}"></h3>
 <h3 th:text="${contact.email}"></h3>
-<h3 th:text="${contact.description}"></h3>
+<h3 th:text="${contact.description}"></h3> -->
+
+
+
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#ID</th>
+      <th scope="col">SCMUSER<span th:text="${contact.cId}"></span></th>
+      
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Email</th>
+      <td><span th:text="${contact.email}"></span></td>
+    </tr>
+    
+    <tr>
+      <th scope="row">Phone</th>
+      <td><span th:text="${contact.phone}"></span></td>
+    </tr>
+    
+    <tr>
+      <th scope="row">Work</th>
+      <td><span th:text="${contact.work}"></span></td>
+    </tr>
+    
+  </tbody>
+</table>
+
+<div class="description">
+  <th:block th:text="${contact.description}"></th:block>
+</div>
+  
+  <div class="container mt-3">
+  
+  <button class="btn btn-danger">Delete</button>
+      <button class="btn btn-success">Update</button></div>
 </div>
 </div>
 </div>
