--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -7,7 +7,7 @@
 <body>
 <section>
 <div class="card">
-<div class="card-body">
+<div class="card-body" th:if=${contact}>
 <h1 class="text-center">Your Contacts</h1>
 
 
