--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -7,7 +7,7 @@
 <body>
 <section>
 <div class="card">
-<div class="card-body" th:if=${contact}>
+<div class="card-body" th:if="${contacts}">
 <h1 class="text-center">Your Contacts</h1>
 
 
@@ -38,8 +38,8 @@
       </td>
       <td th:text="${c.phone}">@mdo</td>
       <td>
-      <button class="btn btn-danger">Delete</button>
-      <button class="btn btn-success">Update</button>
+      <a th:href="@{'/user/delete/'+${c.cId}}" class="btn btn-danger">Delete</a>
+      <a th:href="@{'/user/update/'+${c.cId}}" class="btn btn-success">Update</a>
       
       
       </td>
